# pytorch_nvs_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_PT.md  main.cpp  profiler.py  render.py  render_exp_with_streams.py  render_lvsm.py  requirements.txt  results.md  run.sh  tensor.py
shaders/: fragment.glsl
